--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
     <header>
         <nav class="navbar navbar-expand">
             <div class="container">
-                <a href="#" class="navbar-brand bg-primary m-0" style="width: 41px; height: 41px; border-radius: 50%;">
-                    <span class="text-light d-block text-center">T</span>
-                </a>
-                <h2 class="text-secondary m-0">Trafalgar</h2>
+                <div class="logo d-flex gap-2">
+                    <a href="#" class="navbar-brand bg-primary m-0"
+                        style="width: 41px; height: 41px; border-radius: 50%;">
+                        <span class="text-light d-block text-center fs-3 fw-medium lh-1">T</span>
+                    </a>
+                    <h2 class="text-dark m-0 ">Trafalgar</h2>
+                </div>
+
 
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -40,6 +44,21 @@
         </nav>
     </header>
 
+
+    <!-- ---------------------------------------section------------------------------------------------- -->
+
+    <section class="trafalgar-intro d-flex">
+        <div class="trafalgar-info">
+            <h2>Virtual healthcare for you</h2>
+            <p>Trafalgar provides progressive, and affordable
+                healthcare, accessible on mobile and online
+                for everyone</p>
+            <button>Consult today</button>
+        </div>
+        <div class="trafalgar-image">
+            <img src="/trafalgar-landing-page/illustration.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
