--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -11,18 +12,27 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand">
-            <div class="container">
-                <div class="logo d-flex gap-2">
-                    <a href="#" class="navbar-brand bg-primary m-0"
-                        style="width: 41px; height: 41px; border-radius: 50%;">
-                        <span class="text-light d-block text-center fs-3 fw-medium lh-1">T</span>
-                    </a>
-                    <h2 class="text-dark m-0 ">Trafalgar</h2>
-                </div>
+    <!-- -------------------------navbar------------------------------------------------------------------- -->
+    <header class="container-lg">
+        <nav class="navbar navbar-expand-md">
 
 
+            <!-- --logo-section-- -->
+            <div class="logo d-flex gap-2 align-items-center">
+                <a href="#" class="navbar-brand bg-primary m-0 d-flex align-items-center justify-content-center"
+                    style="width: 41px; height: 41px; border-radius: 50%;">
+                    <span class="text-light d-block text-center fs-3 fw-medium lh-1">T</span>
+                </a>
+                <h2 class="text-dark m-0 ">Trafalgar</h2>
+            </div>
+
+
+            <!-- --toggle-button-- -->
+            <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
+                <div class="navbar-toggler-icon"></div>
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-end" id="nav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a href="" class="nav-link active">Home</a>
@@ -41,6 +51,8 @@
                     </li>
                 </ul>
             </div>
+
+
         </nav>
     </header>
 
@@ -53,12 +65,19 @@
             <p>Trafalgar provides progressive, and affordable
                 healthcare, accessible on mobile and online
                 for everyone</p>
-            <button>Consult today</button>
+            <button type="button" class="btn btn-primary  rounded-pill">Consult
+                today</button>
         </div>
-        <div class="trafalgar-image">
+        <!-- <div class="trafalgar-image">
             <img src="/trafalgar-landing-page/illustration.png" alt="">
-        </div>
+        </div> -->
     </section>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
