--- a/index.html
+++ b/index.html
@@ -59,18 +59,19 @@
 
     <!-- ---------------------------------------section------------------------------------------------- -->
 
-    <section class="trafalgar-intro d-flex">
-        <div class="trafalgar-info">
+    <section class="trafalgar-intro d-flex flex-sm-row flex-column container-lg align-items-center mt-5">
+        <div class="trafalgar-info text-center text-sm-start">
             <h2>Virtual healthcare for you</h2>
             <p>Trafalgar provides progressive, and affordable
                 healthcare, accessible on mobile and online
                 for everyone</p>
-            <button type="button" class="btn btn-primary  rounded-pill">Consult
+            <button type="button" class="btn btn-primary  rounded-pill" style="width: 12.5rem;">Consult
                 today</button>
         </div>
-        <!-- <div class="trafalgar-image">
+        <!-- --image-- -->
+        <div class="trafalgar-image w-lg-100 w-75 h-auto mt-4 mt-sm-auto">
             <img src="/trafalgar-landing-page/illustration.png" alt="">
-        </div> -->
+        </div>
     </section>
 
 
