--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
             <!-- --logo-section-- -->
             <div class="logo d-flex gap-2 align-items-center">
-                <a href="#" class="navbar-brand bg-primary m-0 d-flex align-items-center justify-content-center"
+                <a href="#"
+                    class="navbar-brand bg-primary m-0 d-flex align-items-center justify-content-center logo-text-container"
                     style="width: 41px; height: 41px; border-radius: 50%;">
                     <span class="text-light d-block text-center fs-3 fw-medium lh-1">T</span>
                 </a>
@@ -56,16 +57,20 @@
         </nav>
     </header>
 
+    <div class="left-dotted-img mt-5 position-absolute">
+        <img src="/trafalgar-landing-page/element.png" alt="">
+    </div>
 
-    <!-- ---------------------------------------section------------------------------------------------- -->
+    <!-- ---------------------------------------section-1------------------------------------------------- -->
 
-    <section class="trafalgar-intro d-flex flex-sm-row flex-column container-lg align-items-center mt-5">
-        <div class="trafalgar-info text-center text-sm-start">
+    <section class="trafalgar-intro d-flex flex-sm-row flex-column container-lg align-items-center mt-5 mt-lg-0">
+        <div class="trafalgar-info text-center text-sm-start ">
             <h2>Virtual healthcare for you</h2>
             <p>Trafalgar provides progressive, and affordable
                 healthcare, accessible on mobile and online
                 for everyone</p>
-            <button type="button" class="btn btn-primary  rounded-pill" style="width: 12.5rem;">Consult
+            <button type="button" class="btn btn-primary  rounded-pill logo-text-container mt-2"
+                style="width: 10.5rem;">Consult
                 today</button>
         </div>
         <!-- --image-- -->
