--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 
     <!-- ---------------------------------------section-1------------------------------------------------- -->
 
-    <section class="trafalgar-intro d-flex flex-sm-row flex-column container-lg align-items-center mt-5 mt-lg-0">
-        <div class="trafalgar-info text-center text-sm-start ">
-            <h2>Virtual healthcare for you</h2>
-            <p>Trafalgar provides progressive, and affordable
+    <section class="trafalgar-intro d-flex flex-lg-row flex-column container-lg align-items-center mt-5 mt-lg-0">
+        <div class="trafalgar-info text-center text-lg-start ">
+            <h2 class="mb-4 mb-lg-0">Virtual healthcare for you</h2>
+            <p class="mb-4 mb-lg-0">Trafalgar provides progressive, and affordable
                 healthcare, accessible on mobile and online
                 for everyone</p>
-            <button type="button" class="btn btn-primary  rounded-pill logo-text-container mt-2"
+            <button type="button" class="btn btn-primary  rounded-pill logo-text-container mt-2 mb-3 mb-lg-0"
                 style="width: 10.5rem;">Consult
                 today</button>
         </div>
@@ -80,6 +80,96 @@
     </section>
 
 
+    <!-- ---------------------------------------section-2------------------------------------------------- -->
+
+    <section class="services-section container-lg" style="margin-top: 100px;">
+        <h2 class="text-center">Our services</h2>
+        <p class="text-center">We provide to you the best choiches for you. Adjust it to your health needs and make sure
+            your undergo
+            treatment with our highly qualified doctors you can consult with us which type of service is suitable for
+            your health</p>
+
+        <!-- --cards-- -->
+
+        <div class="row g-4">
+            <div class="col">
+                <div class="card container" style="min-width: 350px; height: 354px;">
+                    <img class="card-img-top mt-5 ms-3" src="/trafalgar-landing-page/Frame.png"
+                        style="width: fit-content; height: fit-content;" />
+                    <div class="card-body">
+                        <h2 class="card-title mt-3">Search doctor</h2>
+                        <p class="card-text">Choose your doctor from thousands of specialist, general, and trusted
+                            hospitals
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card container" style="min-width: 350px; height: 354px;">
+                    <img class="card-img-top mt-5 ms-3" src="/trafalgar-landing-page/second Frame.png"
+                        style="width: fit-content;height: fit-content;" />
+                    <div class="card-body">
+                        <h2 class="card-title">Search doctor</h2>
+                        <p class="card-text">Choose your doctor from thousands of specialist, general, and trusted
+                            hospitals
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card container" style="min-width: 350px; height: 354px;">
+                    <img class="card-img-top mt-5 ms-3" src="/trafalgar-landing-page/third Frame.png"
+                        style="width: fit-content;height: fit-content;" />
+                    <div class="card-body">
+                        <h2 class="card-title">Search doctor</h2>
+                        <p class="card-text">Choose your doctor from thousands of specialist, general, and trusted
+                            hospitals
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card container" style="min-width: 350px; height: 354px;">
+                    <img class="card-img-top mt-5 ms-3" src="/trafalgar-landing-page/fourth Frame.png"
+                        style="width: fit-content;height: fit-content;" />
+                    <div class="card-body">
+                        <h2 class="card-title">Search doctor</h2>
+                        <p class="card-text">Choose your doctor from thousands of specialist, general, and trusted
+                            hospitals
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card container" style="min-width: 350px; height: 354px;">
+                    <img class="card-img-top mt-5 ms-3" src="/trafalgar-landing-page/fifth Frame.png"
+                        style="width: fit-content;height: fit-content;" />
+                    <div class="card-body">
+                        <h2 class="card-title">Search doctor</h2>
+                        <p class="card-text">Choose your doctor from thousands of specialist, general, and trusted
+                            hospitals
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card container" style="min-width: 350px; height: 354px;">
+                    <img class="card-img-top mt-5 ms-3" src="/trafalgar-landing-page/sixth Frame.png"
+                        style="width: fit-content;height: fit-content;" />
+                    <div class="card-body">
+                        <h2 class="card-title">Search doctor</h2>
+                        <p class="card-text">Choose your doctor from thousands of specialist, general, and trusted
+                            hospitals
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
