🐞 fix: some bug fixes for section-2 grid layout

--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
 
         <!-- --cards-- -->
 
-        <div class="row g-4">
+        <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1 g-4">
             <div class="col">
-                <div class="card container" style="min-width: 350px; height: 354px;">
+                <div class="card container border-0 shadow" style="min-width: 280px; height: 290px;">
                     <img class="card-img-top mt-5 ms-3" src="/trafalgar-landing-page/Frame.png"
-                        style="width: fit-content; height: fit-content;" />
+                        style="width: 70px; height: 70px; object-fit: contain;" />
                     <div class="card-body">
-                        <h2 class="card-title mt-3">Search doctor</h2>
+                        <h2 class="card-title">Search doctor</h2>
                         <p class="card-text">Choose your doctor from thousands of specialist, general, and trusted
                             hospitals
                         </p>
@@ -105,9 +105,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card container" style="min-width: 350px; height: 354px;">
+                <div class="card container border-0 shadow" style="min-width: 280px; height: 290px;">
                     <img class="card-img-top mt-5 ms-3" src="/trafalgar-landing-page/second Frame.png"
-                        style="width: fit-content;height: fit-content;" />
+                        style="width: 70px;height: 70px; object-fit: contain; " />
                     <div class="card-body">
                         <h2 class="card-title">Search doctor</h2>
                         <p class="card-text">Choose your doctor from thousands of specialist, general, and trusted
@@ -117,9 +117,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card container" style="min-width: 350px; height: 354px;">
+                <div class="card container border-0 shadow" style="min-width: 280px; height: 290px;">
                     <img class="card-img-top mt-5 ms-3" src="/trafalgar-landing-page/third Frame.png"
-                        style="width: fit-content;height: fit-content;" />
+                        style="width: 70px;height: 70px; object-fit: contain;" />
                     <div class="card-body">
                         <h2 class="card-title">Search doctor</h2>
                         <p class="card-text">Choose your doctor from thousands of specialist, general, and trusted
@@ -129,9 +129,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card container" style="min-width: 350px; height: 354px;">
+                <div class="card container border-0 shadow" style="min-width: 280px; height: 290px;">
                     <img class="card-img-top mt-5 ms-3" src="/trafalgar-landing-page/fourth Frame.png"
-                        style="width: fit-content;height: fit-content;" />
+                        style="width: 70px;height: 70px; object-fit: contain;" />
                     <div class="card-body">
                         <h2 class="card-title">Search doctor</h2>
                         <p class="card-text">Choose your doctor from thousands of specialist, general, and trusted
@@ -141,9 +141,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card container" style="min-width: 350px; height: 354px;">
+                <div class="card container border-0 shadow" style="min-width: 280px; height: 290px;">
                     <img class="card-img-top mt-5 ms-3" src="/trafalgar-landing-page/fifth Frame.png"
-                        style="width: fit-content;height: fit-content;" />
+                        style="width: 70px;height: 70px; object-fit: contain;" />
                     <div class="card-body">
                         <h2 class="card-title">Search doctor</h2>
                         <p class="card-text">Choose your doctor from thousands of specialist, general, and trusted
@@ -153,9 +153,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card container" style="min-width: 350px; height: 354px;">
+                <div class="card container border-0 shadow" style="min-width: 280px; height: 290px;">
                     <img class="card-img-top mt-5 ms-3" src="/trafalgar-landing-page/sixth Frame.png"
-                        style="width: fit-content;height: fit-content;" />
+                        style="width: 70px;height: 70px; object-fit: contain;" />
                     <div class="card-body">
                         <h2 class="card-title">Search doctor</h2>
                         <p class="card-text">Choose your doctor from thousands of specialist, general, and trusted
