✨feature: created section 3 and 4 (subject to bugs)

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 
     <!-- ---------------------------------------section-1------------------------------------------------- -->
 
-    <section class="trafalgar-intro d-flex flex-lg-row flex-column container-lg align-items-center mt-5 mt-lg-0">
+    <section class="trafalgar-intro d-flex flex-lg-row flex-column container-lg align-items-center mt-5">
         <div class="trafalgar-info text-center text-lg-start ">
             <h2 class="mb-4 mb-lg-0">Virtual healthcare for you</h2>
-            <p class="mb-4 mb-lg-0">Trafalgar provides progressive, and affordable
+            <p class="mb-4 mb-lg-0 w-75">Trafalgar provides progressive, and affordable
                 healthcare, accessible on mobile and online
                 for everyone</p>
             <button type="button" class="btn btn-primary  rounded-pill logo-text-container mt-2 mb-3 mb-lg-0"
@@ -166,10 +166,54 @@
             </div>
         </div>
 
-
+        <button type="button"
+            class="btn btn-light border-primary rounded-pill text-primary m-auto d-block mt-5 fw-bold fs-4"
+            style="width: 10.5rem; height: 60px;">Learn
+            more</button>
 
 
     </section>
+
+
+
+    <!-- ---------------------------------------section-3------------------------------------------------- -->
+
+    <section class="out-healthcare-solutions container-lg d-flex align-items-center justify-content-between">
+
+        <div class="solution-image">
+            <img src="/trafalgar-landing-page/trafalgar-illustration sec02 1.png" alt="">
+        </div>
+
+        <div class="solution-text text-left" style="width: 40%;">
+            <h2>Leading healthcare providers</h2>
+            <p class=" ">Trafalgar provides progressive, and affordable healthcare, accessible on mobile
+                and
+                online for everyone.
+                To us, it’s not just work. We take pride
+                in the solutions we deliver</p>
+            <button type="button" class="btn btn-light border-primary rounded-pill text-primary mt-5 fw-bold fs-4"
+                style="width: 10.5rem; height: 60px;">Learn
+                more</button>
+        </div>
+
+    </section>
+
+
+
+    <!-- ---------------------------------------section-4------------------------------------------------- -->
+
+    <section class="download-our-mobile-apps container-lg d-flex align-items-center justify-content-between">
+        <app class="info" style="width: 40%;">
+            <h2>Download our mobile apps</h2>
+            <p>Our dedicated patient engagement app and
+                web portal allow you to access information instantaneously (no tedeous form, long calls,
+                or administrative hassle) and securely</p>
+        </app>
+        <app class="img">
+            <img src="/trafalgar-landing-page/trafalgar-illustration sec03 1.png" alt="">
+        </app>
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
