🐞 fix: Improvements in section 4

--- a/index.html
+++ b/index.html
@@ -203,15 +203,20 @@
     <!-- ---------------------------------------section-4------------------------------------------------- -->
 
     <section class="download-our-mobile-apps container-lg d-flex align-items-center justify-content-between">
-        <app class="info" style="width: 40%;">
+
+        <div class="app-info" style="width: 40%;">
             <h2>Download our mobile apps</h2>
             <p>Our dedicated patient engagement app and
                 web portal allow you to access information instantaneously (no tedeous form, long calls,
                 or administrative hassle) and securely</p>
-        </app>
-        <app class="img">
+            <button type="button" class="btn btn-light border-primary rounded-pill text-primary mt-5 fw-bold fs-4"
+                style="width: 10.5rem; height: 60px;">Download ↓</button>
+        </div>
+
+        <div class="app-img">
             <img src="/trafalgar-landing-page/trafalgar-illustration sec03 1.png" alt="">
-        </app>
+        </div>
+
     </section>
 
 
