✨feature: started working on section 5 (carousel)

--- a/index.html
+++ b/index.html
@@ -220,6 +220,54 @@
     </section>
 
 
+
+    <!-- ---------------------------------------section-5------------------------------------------------- -->
+
+    <section class="reviews-carousel container-lg">
+
+        <div class="carousel mb-5 ">
+            <div class="carousel-inner">
+                <div class="carousel-item active ">
+
+
+
+
+
+
+                    <div class="card carousel-bg p-5 text-light rounded-3">
+                        <div class="card-header  text-center fs-3 fw-medium">
+                            What our customer are saying
+                        </div>
+                        <div class="row g-0">
+                            <div class="col">
+                                <img src="/trafalgar-landing-page/reviewer image.png" class="img-fluid rounded-start"
+                                    alt="...">
+                            </div>
+                            <div class="col">
+                                <div class="card-body">
+                                    <h5 class="card-title fw-normal">Edward Newgate</h5>
+                                    <h6 class="card-subtitle mb-2 fw-light">Founder Circle</h6>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card-body">
+                                    <p class="card-text fw-lighter">“Our dedicated patient engagement app and
+                                        web portal allow you to access information instantaneously (no tedeous form,
+                                        long calls,
+                                        or administrative hassle) and securely”
+                                    </p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
         </script>
