🐞 fix: bug fixes and UI improvements

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="min-vh-100">
     <!-- -------------------------navbar------------------------------------------------------------------- -->
-    <header class="container-lg mt-5">
+    <header class="container-lg mt-2 mt-lg-5">
         <nav class="navbar navbar-expand-md">
 
 
@@ -57,26 +57,27 @@
         </nav>
     </header>
 
-    <div class="left-dotted-img mt-5 position-absolute">
+    <!-- <div class="left-dotted-img mt-5 position-absolute">
         <img src="/trafalgar-landing-page/element.png" alt="">
-    </div>
+    </div> -->
 
     <!-- ---------------------------------------section-1------------------------------------------------- -->
 
     <section
-        class="trafalgar-intro d-flex flex-lg-row flex-column container-lg align-items-center justify-content-between min-vh-100">
+        class="trafalgar-intro d-flex flex-lg-row flex-column container-lg align-items-center justify-content-between mt-lg-5">
 
-        <div class="trafalgar-info w-25">
+        <div class="trafalgar-info w-25 mt-2">
             <h2 class="mb-4 mb-lg-4 text-left">Virtual healthcare for you</h2>
             <p class="mb-4 mb-lg-4  text-left">Trafalgar provides progressive, and affordable
                 healthcare, accessible on mobile and online
                 for everyone</p>
-            <button type="button" class="btn btn-primary  rounded-pill logo-text-container mt-2 mb-3 mb-lg-0 d-block"
+            <button type="button"
+                class="btn btn-primary  rounded-pill logo-text-container mt-4 mt-lg-2 mb-3 mb-lg-0 d-block"
                 style="width: 10.5rem;">Consult
                 today</button>
         </div>
         <!-- --image-- -->
-        <div class="trafalgar-image w-lg-100 w-75 h-auto mt-4 mt-sm-auto">
+        <div class="trafalgar-image w-lg-75 w-100 h-auto mt-4 mt-lg-4 mt-sm-auto">
             <img src="/trafalgar-landing-page/illustration.png" alt="">
         </div>
     </section>
@@ -84,7 +85,7 @@
 
     <!-- ---------------------------------------section-2------------------------------------------------- -->
 
-    <section class="services-section container-lg min-vh-100" style="margin-top: 100px;">
+    <section class="services-section container-lg" style="margin-top: 11.875rem;">
         <h2 class="text-center">Our services</h2>
         <p class="text-center">We provide to you the best choiches for you. Adjust it to your health needs and make sure
             your undergo
@@ -181,7 +182,7 @@
     <!-- ---------------------------------------section-3------------------------------------------------- -->
 
     <section
-        class="out-healthcare-solutions container-lg d-flex flex-lg-row flex-column align-items-center justify-content-between mt-5 min-vh-100">
+        class="out-healthcare-solutions container-lg d-flex flex-lg-row flex-column align-items-center justify-content-between mt-5 ">
 
         <div class="solution-image">
             <img src="/trafalgar-landing-page/trafalgar-illustration sec02 1.png" alt="">
@@ -206,7 +207,7 @@
     <!-- ---------------------------------------section-4------------------------------------------------- -->
 
     <section
-        class="download-our-mobile-apps container-lg d-flex flex-lg-row flex-column-reverse align-items-center justify-content-between mt-5 min-vh-100">
+        class="download-our-mobile-apps container-lg d-flex flex-lg-row flex-column-reverse align-items-center justify-content-between mt-5 ">
 
         <div class="app-info" style="width: 40%;">
             <h2>Download our mobile apps</h2>
@@ -227,7 +228,7 @@
 
     <!-- ---------------------------------------section-5------------------------------------------------- -->
 
-    <section class="reviews-carousel container-lg mt-5 min-vh-100">
+    <section class="reviews-carousel container-lg mt-5 ">
 
         <div class="carousel slide  " id="#carouselExample">
             <div class="carousel-inner">
