--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -66,10 +70,10 @@
     <section
         class="trafalgar-intro d-flex flex-lg-row flex-column container-lg align-items-center justify-content-between mt-lg-5">
 
-        <div class="trafalgar-info w-25 mt-2">
-            <h2 class="mb-4 mb-lg-4 text-left">Virtual healthcare for you</h2>
-            <p class="mb-4 mb-lg-4  text-left">Trafalgar provides progressive, and affordable
-                healthcare, accessible on mobile and online
+        <div class="trafalgar-info w-50 mt-2">
+            <h2 class="mb-4 mb-lg-4">Virtual healthcare for you</h2>
+            <p class="mb-4 mb-lg-4  text-start">Trafalgar provides progressive,
+                and affordable healthcare, accessible on mobile and online
                 for everyone</p>
             <button type="button"
                 class="btn btn-primary  rounded-pill logo-text-container mt-4 mt-lg-2 mb-3 mb-lg-0 d-block"
@@ -85,9 +89,10 @@
 
     <!-- ---------------------------------------section-2------------------------------------------------- -->
 
-    <section class="services-section container-lg" style="margin-top: 11.875rem;">
+    <section class="services-section container-lg" style="margin-top: 14.875rem;">
         <h2 class="text-center">Our services</h2>
-        <p class="text-center">We provide to you the best choiches for you. Adjust it to your health needs and make sure
+        <p class="text-start mt-3">We provide to you the best choiches for you. Adjust it to your health needs and make
+            sure
             your undergo
             treatment with our highly qualified doctors you can consult with us which type of service is suitable for
             your health</p>
@@ -188,9 +193,9 @@
             <img src="/trafalgar-landing-page/trafalgar-illustration sec02 1.png" alt="">
         </div>
 
-        <div class="solution-text text-left" style="width: 40%;">
+        <div class="solution-text" style="width: 40%;">
             <h2>Leading healthcare providers</h2>
-            <p class=" ">Trafalgar provides progressive, and affordable healthcare, accessible on mobile
+            <p class="text-start">Trafalgar provides progressive, and affordable healthcare, accessible on mobile
                 and
                 online for everyone.
                 To us, it’s not just work. We take pride
@@ -211,7 +216,7 @@
 
         <div class="app-info" style="width: 40%;">
             <h2>Download our mobile apps</h2>
-            <p>Our dedicated patient engagement app and
+            <p class="text-start">Our dedicated patient engagement app and
                 web portal allow you to access information instantaneously (no tedeous form, long calls,
                 or administrative hassle) and securely</p>
             <button type="button" class="btn btn-light border-primary rounded-pill text-primary mt-5 fw-bold fs-4"
@@ -230,14 +235,106 @@
 
     <section class="reviews-carousel container-lg mt-5 ">
 
-        <div class="carousel slide  " id="#carouselExample">
+        <div class="carousel slide  " id="carouselExample">
             <div class="carousel-inner">
-                <div class="carousel-item active ">
 
 
+                <div class="carousel-item active "> <!--//first item-->
+
+                    <div class="card carousel-bg p-5 text-light rounded-3 mt-5">
+                        <div class="card-header  text-center fs-3 fw-medium">
+                            What our customer are saying
+                        </div>
+                        <div class="row g-0">
+                            <div class="col d-flex align-items-center ps-5 ">
+                                <img src="/trafalgar-landing-page/reviewer image.png" class="img-fluid rounded-start"
+                                    alt="...">
+
+                                <div class="card-body">
+                                    <h5 class="card-title fw-normal">Edward Newgate</h5>
+                                    <h6 class="card-subtitle mb-2 fw-light">Founder Circle</h6>
+                                </div>
+                            </div>
+                            <div class="col pe-5 d-flex align-items-center">
+                                <div class="card-body">
+                                    <p class="card-text fw-lighter">“Our dedicated patient engagement app and
+                                        web portal allow you to access information instantaneously (no tedeous form,
+                                        long calls,
+                                        or administrative hassle) and securely”
+                                    </p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="carousel-item"><!--//second item-->
+
+                    <div class="card carousel-bg p-5 text-light rounded-3 mt-5">
+                        <div class="card-header  text-center fs-3 fw-medium">
+                            What our customer are saying
+                        </div>
+                        <div class="row g-0">
+                            <div class="col d-flex align-items-center ps-5">
+                                <img src="/trafalgar-landing-page/reviewer image.png" class="img-fluid rounded-start"
+                                    alt="...">
+
+                                <div class="card-body">
+                                    <h5 class="card-title fw-normal">Edward Newgate</h5>
+                                    <h6 class="card-subtitle mb-2 fw-light">Founder Circle</h6>
+                                </div>
+                            </div>
+                            <div class="col pe-5 d-flex align-items-center">
+                                <div class="card-body">
+                                    <p class="card-text fw-lighter">“Our dedicated patient engagement app and
+                                        web portal allow you to access information instantaneously (no tedeous form,
+                                        long calls,
+                                        or administrative hassle) and securely”
+                                    </p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
 
 
+                <div class="carousel-item"><!--//third item-->
 
+                    <div class="card carousel-bg p-5 text-light rounded-3 mt-5">
+                        <div class="card-header  text-center fs-3 fw-medium">
+                            What our customer are saying
+                        </div>
+                        <div class="row g-0">
+                            <div class="col d-flex align-items-center ps-5">
+                                <img src="/trafalgar-landing-page/reviewer image.png" class="img-fluid rounded-start"
+                                    alt="...">
+
+                                <div class="card-body">
+                                    <h5 class="card-title fw-normal">Edward Newgate</h5>
+                                    <h6 class="card-subtitle mb-2 fw-light">Founder Circle</h6>
+                                </div>
+                            </div>
+                            <div class="col pe-5 d-flex align-items-center">
+                                <div class="card-body">
+                                    <p class="card-text fw-lighter">“Our dedicated patient engagement app and
+                                        web portal allow you to access information instantaneously (no tedeous form,
+                                        long calls,
+                                        or administrative hassle) and securely”
+                                    </p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <div class="carousel-item"><!--//fourth item-->
 
                     <div class="card carousel-bg p-5 text-light rounded-3 mt-5">
                         <div class="card-header  text-center fs-3 fw-medium">
@@ -271,6 +368,7 @@
 
 
 
+            <!-- ---bottom-navigation-for-carousel--- -->
             <div class="bottom-navigation d-flex justify-content-evenly align-items-center mt-4">
 
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
@@ -289,13 +387,13 @@
 
 
                 <div class="carousel-indicators ">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0"
                         class=" carousel-indicator active" aria-current="true" aria-label="Slide 1"></button>
-                    <button class="carousel-indicator" type="button" data-bs-target="#carouselExampleIndicators"
+                    <button class="carousel-indicator" type="button" data-bs-target="#carouselExample"
                         data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button class="carousel-indicator" type="button" data-bs-target="#carouselExampleIndicators"
+                    <button class="carousel-indicator" type="button" data-bs-target="#carouselExample"
                         data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    <button class="carousel-indicator" type="button" data-bs-target="#carouselExampleIndicators"
+                    <button class="carousel-indicator" type="button" data-bs-target="#carouselExample"
                         data-bs-slide-to="3" aria-label="Slide 3"></button>
                 </div>
 
