🐞 fix: bug fixes for slider in carousel

--- a/index.html
+++ b/index.html
@@ -246,16 +246,16 @@
                             What our customer are saying
                         </div>
                         <div class="row g-0">
-                            <div class="col d-flex align-items-center ps-5 ">
+                            <div class="col d-flex align-items-center ps-lg-5 flex-lg-row flex-column">
                                 <img src="/trafalgar-landing-page/reviewer image.png" class="img-fluid rounded-start"
                                     alt="...">
 
-                                <div class="card-body">
+                                <div class="card-body text-lg-start text-center">
                                     <h5 class="card-title fw-normal">Edward Newgate</h5>
                                     <h6 class="card-subtitle mb-2 fw-light">Founder Circle</h6>
                                 </div>
                             </div>
-                            <div class="col pe-5 d-flex align-items-center">
+                            <div class="col pe-lg-5 d-flex align-items-center">
                                 <div class="card-body">
                                     <p class="card-text fw-lighter">“Our dedicated patient engagement app and
                                         web portal allow you to access information instantaneously (no tedeous form,
@@ -277,7 +277,7 @@
                             What our customer are saying
                         </div>
                         <div class="row g-0">
-                            <div class="col d-flex align-items-center ps-5">
+                            <div class="col d-flex align-items-center ps-lg-5 flex-lg-row flex-column">
                                 <img src="/trafalgar-landing-page/reviewer image.png" class="img-fluid rounded-start"
                                     alt="...">
 
@@ -286,7 +286,7 @@
                                     <h6 class="card-subtitle mb-2 fw-light">Founder Circle</h6>
                                 </div>
                             </div>
-                            <div class="col pe-5 d-flex align-items-center">
+                            <div class="col pe-lg-5 d-flex align-items-center">
                                 <div class="card-body">
                                     <p class="card-text fw-lighter">“Our dedicated patient engagement app and
                                         web portal allow you to access information instantaneously (no tedeous form,
@@ -309,7 +309,7 @@
                             What our customer are saying
                         </div>
                         <div class="row g-0">
-                            <div class="col d-flex align-items-center ps-5">
+                            <div class="col d-flex align-items-center ps-lg-5 flex-lg-row flex-column">
                                 <img src="/trafalgar-landing-page/reviewer image.png" class="img-fluid rounded-start"
                                     alt="...">
 
@@ -318,7 +318,7 @@
                                     <h6 class="card-subtitle mb-2 fw-light">Founder Circle</h6>
                                 </div>
                             </div>
-                            <div class="col pe-5 d-flex align-items-center">
+                            <div class="col pe-lg-5 d-flex align-items-center">
                                 <div class="card-body">
                                     <p class="card-text fw-lighter">“Our dedicated patient engagement app and
                                         web portal allow you to access information instantaneously (no tedeous form,
@@ -341,7 +341,7 @@
                             What our customer are saying
                         </div>
                         <div class="row g-0">
-                            <div class="col d-flex align-items-center ps-5">
+                            <div class="col d-flex align-items-center ps-lg-5 flex-lg-row flex-column">
                                 <img src="/trafalgar-landing-page/reviewer image.png" class="img-fluid rounded-start"
                                     alt="...">
 
@@ -350,7 +350,7 @@
                                     <h6 class="card-subtitle mb-2 fw-light">Founder Circle</h6>
                                 </div>
                             </div>
-                            <div class="col pe-5 d-flex align-items-center">
+                            <div class="col pe-lg-5 d-flex align-items-center">
                                 <div class="card-body">
                                     <p class="card-text fw-lighter">“Our dedicated patient engagement app and
                                         web portal allow you to access information instantaneously (no tedeous form,
