🐞 fix: minor bug fixes

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 
 
 
-            <div class="col mt-4">            <!--second column of main row-->
+            <div class="col mt-4 mt-md-0">            <!--second column of main row-->
 
                 <div class="row row-cols-md-3 row-cols-1">
                     <div class="col">
@@ -509,7 +509,7 @@
                         <h6>Apps</h6>
                     </div>
 
-                    <div class="col mt-4">
+                    <div class="col mt-4 mt-md-0">
                         <h3>Region</h3>
                         <h6>Indonesia</h6>
                         <h6>Singapore</h6>
@@ -517,7 +517,7 @@
                         <h6>Canada</h6>
                     </div>
 
-                    <div class="col mt-4">
+                    <div class="col mt-4 mt-md-0">
                         <h3>Help</h3>
                         <h6>Help center</h6>
                         <h6>Contact support</h6>
