🐞 fix: UI changes

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </div>
 
         <button type="button"
-            class="btn btn-light border-primary rounded-pill text-primary m-auto d-block mt-4 fw-bold fs-4"
+            class="btn btn-light border-primary rounded-pill text-primary m-auto d-block mt-4 mt-lg-5 fw-bold fs-4"
             style="width: 200px; height: 56px;">Learn
             more</button>
 
