🐞 fix: UI improvements and text-size and font-weight changes

--- a/index.html
+++ b/index.html
@@ -71,13 +71,17 @@
         class="trafalgar-intro d-flex flex-lg-row flex-column container-lg align-items-center justify-content-between mt-lg-5">
 
         <div class="trafalgar-info w-50 mt-2">
-            <h2 class="mb-4 mb-lg-4 text-start">Virtual healthcare for you</h2>
-            <p class="mb-4 mb-lg-4  text-start">Trafalgar provides progressive,
+            <h2 class="mb-4 mb-lg-4 text-center" style="font-size: 48px;
+            font-weight: 700;
+            line-height: 1.2;">Virtual healthcare for you</h2>
+            <p class="mb-4 mb-lg-4  text-center" style="color: #7D7987;
+            font-size: 21px;
+            line-height: 1.6;">Trafalgar provides progressive,
                 and affordable healthcare, accessible on mobile and online
                 for everyone</p>
             <button type="button"
-                class="btn btn-primary  rounded-pill logo-text-container mt-4  mt-lg-2 mb-3 mb-lg-0 d-block fs-4  fw-semi-bold"
-                style=" width: 200px; height: 56px;">Consult
+                class="btn btn-primary  rounded-pill logo-text-container mt-4  mt-lg-2 mb-3 mb-lg-0 d-block fs-4  fw-semi-bold mx-auto"
+                style=" width: 200px; height: 56px; cursor: pointer;">Consult
                 today</button>
         </div>
         <!-- --image-- -->
@@ -90,8 +94,14 @@
     <!-- ---------------------------------------section-2------------------------------------------------- -->
 
     <section class="services-section container-lg mt-4 mt-lg-5" >
-        <h2 class="text-start">Our services</h2>
-        <p class="text-start mt-3">We provide to you the best choiches for you. Adjust it to your health needs and make
+        <h2 class="text-center" style="font-size: 36px;
+        font-weight: 700;
+        color: #000;">Our services</h2>
+        <p class="text-center mt-3" style="max-width: 952px;
+        margin: 0 auto;
+        color: #7D7987;
+        font-size: 18px;
+        line-height: 1.6;">We provide to you the best choiches for you. Adjust it to your health needs and make
             sure
             your undergo
             treatment with our highly qualified doctors you can consult with us which type of service is suitable for
@@ -99,7 +109,7 @@
 
         <!-- --cards-- -->
 
-        <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1 g-4">
+        <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1 g-4 mt-4">
             <div class="col">
                 <div class="card container border-0 shadow" style="min-width: 280px; height: 290px;">
                     <img class="card-img-top mt-4 ms-3" src="/trafalgar-landing-page/Frame.png"
@@ -194,8 +204,10 @@
         </div>
 
         <div class="solution-text" style="width: 40%;">
-            <h2 class="text-start">Leading healthcare providers</h2>
-            <p class="text-start">Trafalgar provides progressive, and affordable healthcare, accessible on mobile
+            <h2 class="text-center" style="font-size: 36px;
+            font-weight: 700;
+            color: #000;">Leading healthcare providers</h2>
+            <p class="text-center mt-3">Trafalgar provides progressive, and affordable healthcare, accessible on mobile
                 and
                 online for everyone.
                 To us, it’s not just work. We take pride
@@ -215,8 +227,10 @@
         class="download-our-mobile-apps container-lg d-flex flex-lg-row flex-column-reverse align-items-center justify-content-between mt-4 mt-lg-5">
 
         <div class="app-info mt-5" style="width: 40%;">
-            <h2 class="text-start">Download our mobile apps</h2>
-            <p class="text-start">Our dedicated patient engagement app and
+            <h2 class="text-center" style="font-size: 36px;
+            font-weight: 700;
+            color: #000;">Download our mobile apps</h2>
+            <p class="text-center mt-3">Our dedicated patient engagement app and
                 web portal allow you to access information instantaneously (no tedeous form, long calls,
                 or administrative hassle) and securely</p>
             <button type="button" class="btn btn-light border-primary rounded-pill text-primary mt-4 fw-bold fs-4"
@@ -242,22 +256,22 @@
                 <div class="carousel-item active "> <!--//first item-->
 
                     <div class="card carousel-bg p-5 text-light rounded-3 mt-4">
-                        <div class="card-header  text-center fs-3 fw-medium">
+                        <h2 class="card-header  text-center fs-3 fw-medium">
                             What our customer are saying
-                        </div>
+                        </h2>
                         <div class="row g-0 flex-lg-row flex-column" >
                             <div class="col d-flex align-items-center ps-lg-5 flex-lg-row flex-column">
                                 <img src="/trafalgar-landing-page/reviewer image.png" class="img-fluid rounded-start"
                                     alt="...">
 
                                 <div class="card-body text-lg-start text-center">
-                                    <h5 class="card-title fw-normal">Edward Newgate</h5>
+                                    <h4 class="card-title fw-normal">Edward Newgate</h4>
                                     <h6 class="card-subtitle mb-2 fw-light">Founder Circle</h6>
                                 </div>
                             </div>
                             <div class="col pe-lg-5 d-flex align-items-center">
                                 <div class="card-body">
-                                    <p class="card-text fw-lighter">“Our dedicated patient engagement app and
+                                    <p class="card-text fw-normal">“Our dedicated patient engagement app and
                                         web portal allow you to access information instantaneously (no tedeous form,
                                         long calls,
                                         or administrative hassle) and securely”
@@ -478,7 +492,7 @@
 
     <!-- ---------------------------------------section-7------------------------------------------------- -->
 
-<footer class="bg-primary pt-5 pb-5 text-white mt-4 mt-lg-5">
+<footer class=" pt-5 pb-5 text-white mt-4 mt-lg-5" style="background-color: #458FF6;">
 
     <div class="container">
         <div class="row justify-content-between row-cols-md-2 row-cols-1">
