🐞 fix: UI changes for section 6 cards: added box shadows

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
         <div class="row row-cols-lg-3 row-cols-1">
             <div class="col mt-3 mt-lg-0">
-                <div class="card" style="min-width: 18rem;">
+                <div class="card shadow border-0" style="min-width: 18rem;">
                     <img src="/trafalgar-landing-page/image 2 (1).png" class="card-img-top" alt="..." style="display: block; max-width: 100%; object-fit: cover;">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
@@ -458,7 +458,7 @@
 
 
             <div class="col mt-3 mt-lg-0">
-                <div class="card" style="min-width: 18rem;">
+                <div class="card shadow border-0" style="min-width: 18rem;">
                     <img src="/trafalgar-landing-page/image 2.png" class="card-img-top" alt="..." style="display: block; max-width: 100%; object-fit: cover;">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
@@ -470,7 +470,7 @@
 
 
             <div class="col mt-3 mt-lg-0">
-                <div class="card" style="min-width: 18rem;">
+                <div class="card shadow border-0" style="min-width: 18rem;">
                     <img src="/trafalgar-landing-page/image 3.png" class="card-img-top" alt="..." style="display: block; max-width: 100%; object-fit: cover;">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
