--- a/index.html
+++ b/index.html
@@ -526,69 +526,89 @@
         <section class="articles  mt-4 mt-lg-5 position-relative">
 
             <div class="section-6 container-lg">
-                <!-- 
+
                 <div class="sec6-l-img position-absolute">
                     <img src="/trafalgar-landing-page/sec-6-left.png" alt="">
-                </div> -->
+                </div>
                 <h2 class="text-center mb-4">Check out our latest article</h2>
                 <span class="small-line mb-3"
                     style="width: 100px; height: 2px; background-color: black; display: block; margin-inline: auto;"></span>
 
 
                 <div class="row row-cols-lg-3 row-cols-1">
-                    <div class="col mt-3 mt-lg-0">
-                        <div class="card shadow border-0" style="min-width: 18rem; border-radius: 20px;">
-                            <img src="/trafalgar-landing-page/image 2 (1).png" class="card-img-top" alt="..."
-                                style="display: block; max-width: 100%; object-fit: cover;">
-                            <div class="card-body">
+                    <div class="col mt-3 mt-lg-0 px-5">
+                        <div class="card shadow-sm border-0"
+                            style="min-width: 18rem; border-radius: 20px; background: white; overflow: hidden; height: 100%;">
+                            <img src="/trafalgar-landing-page/image 2 (1).png" class="card-img-top rounded-top-5"
+                                alt="..." style="height: 300px; max-width: 100%; object-fit: cover;">
+                            <div class="card-body px-4">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <a href="#" class="text-primary border-0" style="text-decoration: none;">Read more
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-arrow-right" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                            d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8" />
+                                    </svg>
+                                </a>
                             </div>
                         </div>
                     </div>
 
 
-                    <div class="col mt-3 mt-lg-0">
-                        <div class="card shadow border-0" style="min-width: 18rem; border-radius: 20px; ">
-                            <img src="/trafalgar-landing-page/image 2.png" class="card-img-top" alt="..."
-                                style="display: block; max-width: 100%; object-fit: cover;">
-                            <div class="card-body">
+                    <div class="col mt-3 mt-lg-0 px-5">
+                        <div class="card shadow-sm border-0" style="min-width: 18rem; border-radius: 20px; ">
+                            <img src="/trafalgar-landing-page/image 2.png" class="card-img-top rounded-top-5" alt="..."
+                                style="height: 300px; max-width: 100%; object-fit: cover;">
+                            <div class="card-body px-4">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <a href="#" class="text-primary border-0" style="text-decoration: none;">Read more
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-arrow-right" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                            d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8" />
+                                    </svg>
+                                </a>
                             </div>
                         </div>
                     </div>
 
 
-                    <div class="col mt-3 mt-lg-0">
-                        <div class="card shadow border-0" style="min-width: 18rem; border-radius: 20px;">
-                            <img src="/trafalgar-landing-page/image 3.png" class="card-img-top" alt="..."
-                                style="display: block; max-width: 100%; object-fit: cover;">
-                            <div class="card-body">
+                    <div class="col mt-3 mt-lg-0 px-5">
+                        <div class="card shadow-sm border-0" style="min-width: 18rem; border-radius: 20px;">
+                            <img src="/trafalgar-landing-page/image 3.png" class="card-img-top rounded-top-5" alt="..."
+                                style="height: 300px; max-width: 100%; object-fit: cover;">
+                            <div class="card-body px-4">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <a href="#" class="text-primary border-0" style="text-decoration: none;">Read more
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-arrow-right" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                            d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8" />
+                                    </svg>
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
 
 
-                <button type="button" class="btn border-primary text-primary rounded-pill d-block mx-auto  mt-4"
+                <button type="button"
+                    class="btn border-primary text-primary rounded-pill d-block mx-auto  mt-4 fw-bold fs-5"
                     style="width: 200px; height: 56px;">View all</button>
 
 
             </div>
 
-            <!-- <div class="sec-6-r-bg position-absolute" style="top: 0; right: 0; z-index: -6; overflow: hidden;">
-                <img src="/trafalgar-landing-page/sec-6-right.png" alt=""
-                    style="width: 100%; height: 100%; object-fit: cover; opacity: 0.3;">
-            </div> -->
+            <div class="sec-6-r-bg position-absolute" style="top: 0; right: 0; z-index: -6; overflow: hidden;">
+                <img src="/trafalgar-landing-page/Vector.svg" alt=""
+                    style="width: 100%; height: 100%; object-fit: cover; opacity: 0.7;">
+            </div>
         </section>
 
 
